--- a/MarkdownGenerator/MarkdownGenerator/MarkdownGenerator.csproj
+++ b/MarkdownGenerator/MarkdownGenerator/MarkdownGenerator.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IMarkdownViewer.cs" />
+    <Compile Include="IParser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
