modify output path for the projects

--- a/MarkdownGenerator/MarkdownGenerator.Parser.UnitTests/MarkdownGenerator.Parser.UnitTests.csproj
+++ b/MarkdownGenerator/MarkdownGenerator.Parser.UnitTests/MarkdownGenerator.Parser.UnitTests.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>b88fa01a-68a7-402f-9b58-fcf66cc2ca08</ProjectGuid>
+    <ProjectGuid>{C3B4DAD7-B54C-4007-AD44-C692E666B178}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>MarkdownGenerator.Parser.UnitTests</RootNamespace>
@@ -21,7 +21,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>..\Binaries\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
