--- a/MarkdownGenerator/MarkdownGenerator.Parser/MarkdownGenerator.Parser.csproj
+++ b/MarkdownGenerator/MarkdownGenerator.Parser/MarkdownGenerator.Parser.csproj
@@ -39,8 +39,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="HeadersParser.cs" />
+    <Compile Include="Parser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MarkdownGenerator.Common\MarkdownGenerator.Common.csproj">
+      <Project>{fd7d868c-b3f4-422e-83eb-b292adf7dccf}</Project>
+      <Name>MarkdownGenerator.Common</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
