--- a/MarkdownGenerator/MarkdownGenerator.Parser/MarkdownGenerator.Parser.csproj
+++ b/MarkdownGenerator/MarkdownGenerator.Parser/MarkdownGenerator.Parser.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HeadersParser.cs" />
+    <Compile Include="ParagraphsParser.cs" />
     <Compile Include="Parser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
