--- a/MarkdownGenerator/MarkdownGenerator.Parser.UnitTests/MarkdownGenerator.Parser.UnitTests.csproj
+++ b/MarkdownGenerator/MarkdownGenerator.Parser.UnitTests/MarkdownGenerator.Parser.UnitTests.csproj
@@ -56,6 +56,10 @@
     <Compile Include="ParagraphsParser.UnitTests.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\MarkdownGenerator.Common\MarkdownGenerator.Common.csproj">
+      <Project>{fd7d868c-b3f4-422e-83eb-b292adf7dccf}</Project>
+      <Name>MarkdownGenerator.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MarkdownGenerator.Parser\MarkdownGenerator.Parser.csproj">
       <Project>{1a2075d7-3f85-483d-b6e2-3daf6b8ea76e}</Project>
       <Name>MarkdownGenerator.Parser</Name>
