modify ISignalState interface and all the classes which implement this interface

--- a/MarkdownGenerator/MarkdownGenerator.Parser/MarkdownGenerator.Parser.csproj
+++ b/MarkdownGenerator/MarkdownGenerator.Parser/MarkdownGenerator.Parser.csproj
@@ -55,6 +55,7 @@
     <Compile Include="ParserStates\HeaderState.cs" />
     <Compile Include="ParserStates\ImgState.cs" />
     <Compile Include="ParserStates\ISignalState.cs" />
+    <Compile Include="ParserStates\ISignalSubElemState.cs" />
     <Compile Include="ParserStates\ItalicState.cs" />
     <Compile Include="ParserStates\LinkState.cs" />
     <Compile Include="ParserStates\OLState.cs" />
