--- a/MarkdownGenerator/MarkdownGenerator.Parser.UnitTests/MarkdownGenerator.Parser.UnitTests.csproj
+++ b/MarkdownGenerator/MarkdownGenerator.Parser.UnitTests/MarkdownGenerator.Parser.UnitTests.csproj
@@ -50,10 +50,11 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="HeadersParser.UnitTests.cs" />
-    <Compile Include="Parser.UnitTests.cs" />
+    <Compile Include="Converter.cs" />
+    <Compile Include="Code.Parser.UnitTests.cs" />
+    <Compile Include="OrderedList.Parser.UnitTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ParagraphsParser.UnitTests.cs" />
+    <Compile Include="Header.Parser.UnitTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MarkdownGenerator.Common\MarkdownGenerator.Common.csproj">
