--- a/MarkdownGenerator/MarkdownGenerator.Common/MarkdownGenerator.Common.csproj
+++ b/MarkdownGenerator/MarkdownGenerator.Common/MarkdownGenerator.Common.csproj
@@ -40,7 +40,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Data\Code.cs" />
-    <Compile Include="Data\Header.cs" />
+    <Compile Include="Data\Header1.cs" />
+    <Compile Include="Data\Header2.cs" />
+    <Compile Include="Data\Header3.cs" />
+    <Compile Include="Data\Header4.cs" />
+    <Compile Include="Data\Header5.cs" />
+    <Compile Include="Data\Header6.cs" />
     <Compile Include="Data\LinkItem.cs" />
     <Compile Include="Data\ListItem.cs" />
     <Compile Include="Data\MdDoc.cs" />
@@ -49,6 +54,7 @@
     <Compile Include="Data\Paragraph.cs" />
     <Compile Include="Data\UnorderedList.cs" />
     <Compile Include="IMarkdownViewer.cs" />
+    <Compile Include="IMdDocFormatter.cs" />
     <Compile Include="IParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
