--- a/MarkdownGenerator/MardownGenerator.Viewer/MarkdownGenerator.Viewer.csproj
+++ b/MarkdownGenerator/MardownGenerator.Viewer/MarkdownGenerator.Viewer.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{0F6D05F0-0F09-4C6B-B5F3-D217577F9BEA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MardownGenerator.Viewer</RootNamespace>
-    <AssemblyName>MardownGenerator.Viewer</AssemblyName>
+    <RootNamespace>MarkdownGenerator.Viewer</RootNamespace>
+    <AssemblyName>MarkdownGenerator.Viewer</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HtmlFormatter.cs" />
     <Compile Include="MDViewer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
