refactor HtmlDocument class
 - add missing tags

--- a/MarkdownGenerator/MardownGenerator.Viewer/MarkdownGenerator.Viewer.csproj
+++ b/MarkdownGenerator/MardownGenerator.Viewer/MarkdownGenerator.Viewer.csproj
@@ -39,7 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="HtmlFormatter.cs" />
+    <Compile Include="HtmlDocument.cs" />
     <Compile Include="MDViewer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
