implement list item state class

--- a/MarkdownGenerator/MarkdownGenerator.Parser/MarkdownGenerator.Parser.csproj
+++ b/MarkdownGenerator/MarkdownGenerator.Parser/MarkdownGenerator.Parser.csproj
@@ -55,6 +55,7 @@
     <Compile Include="ParserStates\ISignalSubElemState.cs" />
     <Compile Include="ParserStates\ItalicState.cs" />
     <Compile Include="ParserStates\LinkState.cs" />
+    <Compile Include="ParserStates\ListItemState.cs" />
     <Compile Include="ParserStates\OLState.cs" />
     <Compile Include="ParserStates\ParagraphState.cs" />
     <Compile Include="ParserStates\ULState.cs" />
