fix include issue

--- a/MarkdownGenerator/MarkdownGenerator.Common/MarkdownGenerator.Common.csproj
+++ b/MarkdownGenerator/MarkdownGenerator.Common/MarkdownGenerator.Common.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Data\MdElement.cs" />
     <Compile Include="Data\OrderedList.cs" />
     <Compile Include="Data\Paragraph.cs" />
+    <Compile Include="Data\TextItem.cs" />
     <Compile Include="Data\UnorderedList.cs" />
     <Compile Include="IMarkdownViewer.cs" />
     <Compile Include="IMdDocFormatter.cs" />
