add css to Html document

--- a/MarkdownGenerator/MardownGenerator.Viewer/MarkdownGenerator.Viewer.csproj
+++ b/MarkdownGenerator/MardownGenerator.Viewer/MarkdownGenerator.Viewer.csproj
@@ -37,8 +37,10 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Serialization" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CssSettings.cs" />
     <Compile Include="Html\HtmlText.cs" />
     <Compile Include="Html\HtmlElementFactory.cs" />
     <Compile Include="Html\HtmlElement.cs" />
